# RecordingBot

./: LICENSE  README.md  db_prototype.drawio
src/: .gitignore  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2024_03_31_1938-4486c5c89804_create_tables.py  2024_03_31_2043-006ec0df771f_create_tables.py
src/app/: main.py
src/app/callback_data/: organization_callback_data.py
src/app/constants/: bot_info.py  roles.py
src/app/database/: container.py  database.py  models.py
src/app/database/dals/: organization_dal.py  organization_user_dal.py  recording_dal.py  recording_week_dal.py  role_dal.py  user_dal.py
src/app/database/services/: organization_service.py  organization_user_service.py  recording_service.py  recording_week_service.py  role_service.py  user_service.py
src/app/keyboard/inline_keybord/: create_active_organization_keyboard.py
src/app/messages_templates/: main_messages_template.py  message_templates.py  organization_messages_template.py  role_messages_template.py  subscribe_message_template.py  subscribe_messages_template.py  user_messages_template.py
src/app/routers/: create_router.py  main_router.py  organization_router.py  role_router.py  subscribe_router.py  user_router.py
src/app/scripts/: create_roles_in_db.py
src/app/state_groups/: organization_state_group.py  profile_state_group.py  role_state_group.py  subscribe_state_group.py
src/app/utils/: entity_helper.py  escape_markdown_v2.py  generate_password.py  hash_string.py
