[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Arkadiy <goryunov.arkadiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
icecream = "^2.1.3"
loguru = "^0.7.2"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
